removed more stupid deprecated warnings